# ZipConversor

./: CMakeLists.txt  README.md  gui.cpp  main.cpp
